--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -6,4 +6,4 @@ db.password=root
 
 # Hibernate properties
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=update
